--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Jed Schmidt <tr@nslator.jp> (http://jed.is)",
-  "name": "dynamo",
+  "name": "mp-dynamo",
   "description": "DynamoDB client for node.js",
-  "version": "0.2.12",
+  "version": "0.2.13",
   "homepage": "https://github.com/jed/dynamo",
   "repository": {
     "type": "git",
